Fixed overflow

--- a/css/main.less
+++ b/css/main.less
@@ -14,6 +14,15 @@ body {
 	font-family: @font;
 	background-color: @navy;
 	overflow-x: hidden;
+	overflow-y: hidden;
+}
+
+#wrapper {
+	overflow-x: hidden;
+	overflow-y: hidden;
+	height: 100%;
+	width: 100%;
+	margin: 0;
 }
 
 // Hide Scroll bar
